--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,9 @@
 }
 
 .input {
-  display: flex;
+  display: block;
+  width: 50%;
+  max-width: 250px;
   gap: 3%;
 }
 
@@ -32,12 +34,7 @@ textarea {
   width: 100%;
   max-width: 250px;
   height: 7em;
-  
-}
-
-.box {
-  display: flex;
-  gap: 5%;
+  resize: none;
 }
 
 @media (max-width: 800px) {
@@ -46,8 +43,7 @@ textarea {
   }
 }
 
-
-.buttons{
+.buttons {
   display: flex;
   width: 50%;
   max-width: 250px;
